--- a/css/screens/calls.css
+++ b/css/screens/calls.css
@@ -1,10 +1,4 @@
-.top {
+.topbar {
   display: flex;
-  justify-content: center;
-}
-.top__edit {
-  width: 33%;
-}
-.top__emo i {
-  width: 33%;
+  justify-content: space-between;
 }
