--- a/css/screens/updates.css
+++ b/css/screens/updates.css
@@ -58,7 +58,7 @@
   border-radius: 35px;
 }
 .status-box__pic i {
-  color: #2f73c2;
+  color: #;
   position: relative;
   font-size: 23px;
   bottom: 8px;
