--- a/css/screens/calls.css
+++ b/css/screens/calls.css
@@ -1,14 +1,74 @@
 .topbar {
   display: flex;
   justify-content: space-between;
+  margin: 15px;
+}
+.topbar__edit {
+  color: #2f73c2;
+  font-size: 17px;
+}
+.topbar__icon i {
+  font-size: 20px;
+  color: #2f73c2;
+}
+
+.tobar__buttons {
+  background-color: #e3e2e7;
+  padding: 5px 15px 5px 8px;
+  border-radius: 5px;
+}
+.all {
+  background-color: white;
+  border-radius: 5px;
+  margin-right: 10px;
+  padding: 3px 23px;
+  position: relative;
+  left: -5px;
 }
 .call-link {
   display: flex;
+  background-color: white;
+  margin: 10px;
+  border-radius: 8px;
+}
+.call-link__icon {
+  color: #2f73c2;
+  background-color: #e3e2e7;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 50%;
+}
+.call-link__top {
+  margin: 5px;
+  padding-top: 7px;
+  font-size: 17px;
+  color: #2f73c2;
+}
+.call-link__share {
+  margin-left: 5px;
+  padding-bottom: 10px;
+  opacity: 80%;
+}
+.recent {
+  font-size: 20px;
+  font-weight: 600;
+  margin: 10px;
 }
 .call-history {
   display: flex;
+  justify-content: space-between;
+  background-color: white;
+  padding: 10px;
+  border-radius: 10px;
 }
 .call-history__img img {
-  width: 100px;
-  height: 100px;
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
+}
+.search-bar {
+  opacity: 0.8;
+}
+.search-bar i {
+  padding-left: 7px;
 }
