--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -1,11 +1,11 @@
 .status-bar {
   display: flex;
   justify-content: space-between;
-  margin-top: 40px;
+  margin-top: 20px;
   background-color: white;
 }
 .status-bar__first {
-  margin: 20px;
+  margin: 13px 10px 10px 10px;
 }
 .status-bar__updates {
   flex-wrap: wrap;
@@ -13,32 +13,32 @@
 }
 .updates__emo i {
   margin-left: 20px;
-  font-size: 28px;
+  font-size: 17px;
   color: #017bfe;
 }
 .calls__emo {
   margin-left: 8px;
-  font-size: 28px;
+  font-size: 17px;
   color: #017bfe;
 }
 .communities__emo {
   margin-left: 30px;
-  font-size: 28px;
+  font-size: 17px;
   color: #017bfe;
 }
 .chats__emo {
   margin-left: 9px;
-  font-size: 28px;
+  font-size: 17px;
   color: #017bfe;
 }
 
 .settings__emo {
   margin-left: 15px;
-  font-size: 28px;
+  font-size: 17px;
   color: #017bfe;
 }
 .bar__letters {
   padding-top: 10px;
-  font-size: 18px;
+  font-size: 15px;
   opacity: 80%;
 }
